<resources>
    <string name="app_name">Revenue</string>
    <string name="Save">Save</string>
    <string name="new_item_name">Name</string>
    <string name="new_item_description">Descripition</string>
    <string name="new_item_phone">Phone</string>
    <string name="new_item_amount">Amount</string>
    <string name="new_item_first_due_date">First Due Date</string>
    <string name="new_item_recurrence">Recurrence</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_new_partner">Add Partner</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="balance_due">Balance_due</string>
    <string name="amount_received">Amount Received</string>
    <string name="pay">Pay</string>
    <string name="no_data">No Data</string>
    <string name="please_wait">Please Wait</string>
    <string name="add_new_item_partner">Partner</string>

    <string name="log_on">Log On</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="menu">Menu</string>
    <string name="calender">Calender</string>
    <string name="settings">Settings</string>
    <string name="add_partner">Add Partner</string>
    <string name="signIn">SignIn</string>
    <string name="add_transaction">Add Transaction</string>


</resources>
