<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/log_in_bg"
    android:id="@+id/newItemLL"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/newItemCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_10"
        app:cardElevation="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_name" />

                <TextView
                    android:padding="@dimen/default_padding_10"
                    android:text="Ctrl-O" />

            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/border_color" />

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_description" />

                <TextView
                    android:padding="10dp"
                    android:text="Ctrl-S" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/border_color" />

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_phone" />

                <TextView
                    android:padding="@dimen/default_padding_10"
                    android:text="Ctrl-Shift-S" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/border_color" />

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_amount" />

                <TextView
                    android:padding="@dimen/default_padding_10"
                    android:text="Ctrl-Shift-S" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/border_color" />

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_first_due_date" />

                <TextView
                    android:padding="@dimen/default_padding_10"
                    android:text="Ctrl-Shift-S" />
            </TableRow>

            <View
                android:layout_height="2dip"
                android:background="@color/border_color" />

            <TableRow>

                <TextView
                    android:background="@drawable/bg_bottom_right_border"
                    android:padding="@dimen/default_padding_10"
                    android:text="@string/new_item_recurrence" />

                <TextView
                    android:padding="@dimen/default_padding_10"
                    android:text="Ctrl-Shift-S" />
            </TableRow>

        </TableLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@id/newItemCV"
        android:id="@+id/newItemPatnerCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/margin_15"
                android:text="@string/add_new_item_partner"
                android:textColor="@android:color/white" />

            <include
                layout="@layout/fragment_list"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_below="@id/newItemPatnerCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin_10"
        android:layout_marginStart="@dimen/default_margin_10"
        android:layout_marginTop="20dp"
        android:background="@color/sign_in_btn"
        android:text="@string/Save" />


    <com.github.clans.fab.FloatingActionMenu
        android:elevation="2dp"
        android:id="@+id/menu_add_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/default_padding_10"
        android:paddingLeft="@dimen/default_padding_10"
        android:paddingRight="@dimen/default_padding_10"
        fab:menu_backgroundColor="@color/log_in_bg"
        fab:menu_colorNormal="@color/sign_in_btn"
        fab:menu_colorPressed="@color/sign_in_btn"
        fab:menu_colorRipple="@color/sign_in_btn"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addNewItemFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            fab:fab_label="Add New Item"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/addPartnerFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            fab:fab_label="Add Partner"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>