<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/log_in_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/default_padding_10"
    android:paddingRight="@dimen/default_padding_10"
    android:paddingStart="@dimen/default_padding_10">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:elevation="3dp"
            card_view:cardCornerRadius="@dimen/default_padding_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userNameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_padding_10"
                    android:layout_marginLeft="@dimen/default_padding_10"
                    android:layout_marginStart="@dimen/default_padding_10"
                    android:layout_marginTop="60dp"
                    android:hint="@string/hint_username"
                    android:backgroundTint="@color/edit_text_line"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="@dimen/default_padding_10"
                    android:drawableStart="@drawable/password"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/hint_password"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/edit_text_line"
                    android:drawableLeft="@drawable/password"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/password"
                    android:textSize="12sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/sign_in_btn"
        android:text="@string/log_on"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />
</LinearLayout>